--- a/main.css
+++ b/main.css
@@ -35,6 +35,7 @@ input[type="submit"] {
 input[type="submit"]:hover {
   cursor: pointer;
   box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2);
+  background-color: #426600;
   transition: 0.3s;
 }
 
@@ -79,7 +80,7 @@ h1 {
 }
 
 .search-result-title:hover {
-  background-color: #91602f;
+  background-color: #b7793b;
   box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2);
   cursor: pointer;
 }
