--- a/main.css
+++ b/main.css
@@ -1,12 +1,10 @@
 * {
     box-sizing: border-box;
 }
-  
 body {
   font-family: 'Roboto Mono', monospace;
   background-color: #F1F1F2;
 }  
-
 input[type="text"], input[type="number"] {
   padding: 10px;
   width: 250px;
@@ -16,7 +14,6 @@ input[type="text"], input[type="number"] {
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
-
 input[type="submit"] {
   /* font-family: 'Open Sans', sans-serif; */
   background-color: #2E4600;
@@ -31,42 +28,45 @@ input[type="submit"] {
   transition: 0.3s;
   font-size: 20px;
 }
-
 input[type="submit"]:hover {
   cursor: pointer;
   box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2);
   background-color: #426600;
   transition: 0.3s;
 }
-
 input[type="text"]:hover, input[type="number"]:hover {
   cursor: pointer;
   box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
 }
-
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-
 li {
   padding: 10px;
 }
-
 li, img {
   max-width: 750px;
 }
-
 fieldset {
   border: none;
 }
-
 h1 {
   font-size: 35px;
 }
-
+.error-message {
+    color: red;
+    font-size: 20px;
+}
+.hidden {
+  display: none;
+}
+.title, label {
+  color: #2E4600;
+  text-align: center;
+}
 .search-result-title {
   background-color: #916023;
   color: white;
@@ -79,13 +79,11 @@ h1 {
   transition: 0.3s;
   min-width: 100%;
 }
-
 .search-result-title:hover {
   background-color: #b7793b;
   box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2);
   cursor: pointer;
 }
-
 .container {
   max-width: 800px;
   height: 100%;
@@ -94,35 +92,50 @@ h1 {
   flex-direction: column;
   align-items: center;
 }
-
 .form-container, fieldset {
   padding-top: 50px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+.park-info-container {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.park-planner-collapsible-container {
+  background-color: skyblue;
+  height: 100%;
+  width: 100%;
+  /* display: inline-block; */
+}
 
-.title, label {
-  color: #2E4600;
+/* FORECAST STYLES */
+.forecast-container {
+  display: inline-block;
+}
+.forecast-title {
+  font-size: 20px;
   text-align: center;
+  color: #F68B1F ;
 }
-
-.error-message {
-    color: red;
-    font-size: 20px;
+.forecast-day {
+  font-weight: bold;
 }
-
-.hidden {
-  display: none;
+.forecast-phrase {
+}
+.forecast-min {
+}
+.forecast-max {
 }
 
 #selected-park-li {
-  height: 750px;
-  width: 750px;
     /* for dev ease */
-  background-color: gray;  
-}
+  /* background-color: gray;   */
 
+}
 /* To solve the size issue when the LI is converted to a planner window. 
 1) add some unique id to the  containing LI  
 2) set size and height around 800px or something responsive
